logs/errors.log
src/clientTest.c: In function ‘main’:
src/clientTest.c:44:59: error: ‘optVal’ undeclared (first use in this function)
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                           ^~~~~~
src/clientTest.c:44:59: note: each undeclared identifier is reported only once for each function it appears in
src/clientTest.c:44:67: error: ‘optLen’ undeclared (first use in this function); did you mean ‘open’?
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                                   ^~~~~~
      |                                                                   open
src/clientTest.c:57:10: error: assignment to expression with array type
   57 |   buffer = "Test";
      |          ^
src/clientTest.c: In function ‘main’:
src/clientTest.c:44:59: error: ‘optVal’ undeclared (first use in this function)
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                           ^~~~~~
src/clientTest.c:44:59: note: each undeclared identifier is reported only once for each function it appears in
src/clientTest.c:44:67: error: ‘optLen’ undeclared (first use in this function); did you mean ‘open’?
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                                   ^~~~~~
      |                                                                   open
src/clientTest.c:57:10: error: assignment to expression with array type
   57 |   buffer = "Test";
      |          ^
src/clientTest.c: In function ‘main’:
src/clientTest.c:44:59: error: ‘optVal’ undeclared (first use in this function)
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                           ^~~~~~
src/clientTest.c:44:59: note: each undeclared identifier is reported only once for each function it appears in
src/clientTest.c:44:67: error: ‘optLen’ undeclared (first use in this function); did you mean ‘open’?
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                                   ^~~~~~
      |                                                                   open
src/clientTest.c:57:10: error: assignment to expression with array type
   57 |   buffer = "Test";
      |          ^
src/clientTest.c: In function ‘main’:
src/clientTest.c:44:59: error: ‘optVal’ undeclared (first use in this function)
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                           ^~~~~~
src/clientTest.c:44:59: note: each undeclared identifier is reported only once for each function it appears in
src/clientTest.c:44:67: error: ‘optLen’ undeclared (first use in this function); did you mean ‘open’?
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                                   ^~~~~~
      |                                                                   open
src/clientTest.c:57:10: error: assignment to expression with array type
   57 |   buffer = "Test";
      |          ^
src/clientTest.c: In function ‘main’:
src/clientTest.c:44:59: error: ‘optVal’ undeclared (first use in this function)
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                           ^~~~~~
src/clientTest.c:44:59: note: each undeclared identifier is reported only once for each function it appears in
src/clientTest.c:44:67: error: ‘optLen’ undeclared (first use in this function); did you mean ‘open’?
   44 |   socketSetOpt(sockfd, SOL_SOCKET, SO_REUSEPORT, (void*) &optVal, optLen, 2);
      |                                                                   ^~~~~~
      |                                                                   open
src/clientTest.c:57:10: error: assignment to expression with array type
   57 |   buffer = "Test";
      |          ^
[7-1-2022 14:0:18] (code: 88) common.h: socketBind failed
[7-1-2022 15:3:51] (code: 98) common.h: socketBind failed
[7-1-2022 15:4:7] (code: 98) common.h: socketBind failed
[7-1-2022 16:40:13] (code: 3) [MASTER] Error reading from socket
